# hackomania_contextguard

./: ContextGuard_HackathonBrief.md  PRODUCT_SPEC.md  README.md  TECHNICAL_DETAILS.md  nipah-virus-false-narratives.md  package-lock.json  package.json  playwright.config.ts
app/: globals.css  layout.tsx
app/api/analyze/: route.ts
app/api/telegram/: route.ts
app/community/: page.tsx
app/dashboard/: page.tsx
components/: ActionPanel.tsx  AnalyzedArticle.tsx  AnnouncementInput.tsx  CommunityAlertCard.tsx  CopyButton.tsx  CounterNarrativeDisplay.tsx  HeroSection.tsx  LanguageToggle.tsx  Navbar.tsx  PatternBar.tsx  ProcessingAnimation.tsx  RiskBadge.tsx  RumourCard.tsx  SummaryStats.tsx
data/: demo-scenario.ts  nipah-scenario.ts
e2e/: source-extraction.spec.ts
lib/: clickhouse.ts  types.ts
lib/ai/: analyze-and-predict.ts  client.ts  embedding.ts  extract-topics.ts
lib/clickhouse/: rag.ts
lib/scraper/: firecrawl-client.ts  search.ts
scraper/: article_scraper.py  pyproject.toml
scripts/: capture-screenshots.ts  ingest.ts  scrape-and-ingest.ts  scrape-historical.ts
test-results/source-extraction-Source-E-e545d-t-sources-→-display-results-chromium/: error-context.md
